[project]
name = "memento-mori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "free-proxy>=1.1.3",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "python-telegram-bot>=22.6",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
